Fixed menu getting too narrow at smaller screen widths

--- a/web/public/modules/core/styles/core.scss
+++ b/web/public/modules/core/styles/core.scss
@@ -73,7 +73,7 @@ body {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 20%;
+	width: 20em;
 	z-index: 1001;
 	background-color: #29343e;
 	margin: 0;
